.deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill-dp
  labels:
    app: bill-dp
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: v1
  template:
    metadata:
      labels:
        env: v1
    spec:
      containers:
      - name: bill-app
        image: nikolaygr/otusbill:v0.1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
